--- a/podcast_js.html
+++ b/podcast_js.html
@@ -16,8 +16,10 @@
 				<div class="col-xs-6 col-md-1" style="margin-top: 1%; text-align: left;"><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></div>
 				<div class="col-xs-6 col-md-1" id="div-titulo"><h4>Podcast URL</h4></div>
 				<div class="col-xs-12 col-md-8" style="padding: 0;">
-					<input type="text" class="txt-caja" name="validate-text" id="podcast-url" required="">
-					<button type="button" class="glyphicon glyphicon-menu-right" onclick="EnviarUrl();"></button>
+					<form id="formulario">
+						<input type="text" class="txt-caja" name="validate-text" id="podcast-url" required="" name="podcast-url">
+						<button type="button" class="glyphicon glyphicon-menu-right" onclick="EnviarUrl();"></button>
+					</form>
 				</div>
 				<div class="col-xs-6 col-md-2" style="display: none;"><h5>CONTACTO</h5></div>
 			</div>
